# todos-database

./: app.py  pyproject.toml  requirements.txt  schema.sql
static/stylesheets/: whitespace-reset.css:Zone.Identifier
templates/: edit_list.html  layout.html  list.html  lists.html  new_list.html
todos/: database_persistence.py  session_persistence.py  utils.py
